--- a/sfg-pet-clinic/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/sfg-pet-clinic/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th = "http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-    <h1 th:text="'List of Owners'">List of Owners..</h1>
+<h1 th:text="'List of Owners'">List of Owners..</h1>
+<table>
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>FirstName</th>
+        <th>LastName</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="owner: ${owners}">
+        <td th:text="${owner.id}">1</td>
+        <td th:text="${owner.firstName}">Joe</td>
+        <td th:text="${owner.lastName}">Buck</td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
