--- a/sfg-pet-clinic/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/sfg-pet-clinic/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+<!--/*@thymesVar id="owner" type="com.example.sfgpetclinic.model.Owner"*/-->
 <h1 th:text="'List of Owners'">List of Owners..</h1>
 <table>
     <thead>
