--- a/sfg-pet-clinic/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/sfg-pet-clinic/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -5,7 +5,7 @@
     <title>List of Vets</title>
 </head>
 <body>
-<!--/*@thymesVar id="vet" type="com.example.sfgpetclinic.model.Vet"*/-->
+<!--/*@thymesVar id="vet" type="guru.springframework.sfgpetclinic.model.Vet"*/-->
 
 <h1 th:text="'List of Vets'">List of Vets...</h1>
 
